--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,10 +44,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-        <activity
-            android:name=".Login"
-            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ListaSpesa"
             android:parentActivityName=".MainActivity" />
@@ -66,6 +62,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BarcodeProduct"
+            android:parentActivityName=".BarcodeReader">
+
+        </activity>
+
     </application>
 
 </manifest>
